Fix position of composited, paginated inlines.

Previously, we were not including the offset from the PaintLayer of the composited layer when calling PaintLayer::visualOffsetFromAncestor to compute GraphicsLayer
offset from the composited ancestor.

It's important to include this offset when converting from logical to visual
coordinates across a paginated layer boundary, because the offset influences the
fragment offset of the composited layer.

BUG=667213
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2738943004
Cr-Commit-Position: refs/heads/master@{#455982}

Former-commit-id: a1277dcaaae26865cc6591bda0d6d696b5a0f073